--- a/WebMVC/wwwroot/css/site.less
+++ b/WebMVC/wwwroot/css/site.less
@@ -19,7 +19,6 @@ a.navbar-brand {
     .title {
         color: @base;
     }
-
 }
 
 #overview {
@@ -29,4 +28,42 @@ a.navbar-brand {
 
 #global {
     background-color: #F2F2F2;
+}
+
+#profile-picture {
+    display: block;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    max-width: 144px;
+    max-height: 144px;
+    margin-top: -46px;
+    margin-left: 46px;
+    opacity: .7;
+}
+
+.space-header {
+    margin-top: 50px;
+}
+
+.page-header {
+    border-bottom: none;
+    margin-bottom: 1.5em;
+}
+
+.status-running {
+    color: green;
+}
+
+.status-stop {
+    color: red;
+}
+
+.profile-detail {
+    padding: 1em;
+}
+
+input.form-control, textarea.form-control {
+    max-width: 486px;
 }
