GetAcctRaw query by paging fix monthlytraffic null unblock report router even nobody online powershell install routerreporter add redeem code

--- a/WebMVC/Views/Dashboard/Index.cshtml
+++ b/WebMVC/Views/Dashboard/Index.cshtml
@@ -27,6 +27,9 @@
                         <li role="presentation">
                             <a href="#"><span class="glyph glyph-shopping-cart"></span>Payment</a>
                         </li>
+                        <li role="presentation">
+                            <a href="#"><span class=""></span>Redeem code</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -134,7 +137,7 @@
                                     <td>@a.UserName</td>
                                     <td>@a.EventTime</td>
                                     <td class="hidden-xs">@a.Protocal</td>
-                                    <td>@a.Duration</td>
+                                    <td>@a.DurationDisplay()</td>
                                     <td class="text-right">@a.TotalTraffic</td>
                                 </tr>
                             }
