--- a/Windows/Pages/ChatPage.xaml
+++ b/Windows/Pages/ChatPage.xaml
@@ -1,14 +1,15 @@
-﻿<Page x:Class="Windows.LoginPage"
+﻿<local:BasePage x:TypeArguments="local:LoginViewModel" x:Class="Windows.ChatPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Windows"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="LoginPage">
+      x:Name="Page"
+      d:DesignHeight="700" d:DesignWidth="700"
+      Title="Chat">
 
-    <Grid>
-        
-    </Grid>
-</Page>
+    <Border>
+
+    </Border>
+</local:BasePage>
