--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -120,7 +120,7 @@
     </WindowChrome.WindowChrome>
 
     <Grid Background="{StaticResource BackgroundLightBrush}">
-        <Frame x:Name="MainFrame" Content="{Binding CurrentPage, Converter={local:ApplicationPageValueConverter}}" />
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Content="{Binding CurrentPage, Converter={local:ApplicationPageValueConverter}}" />
     </Grid>
 
 </Window>
