--- a/Windows/Pages/ServerPage.xaml
+++ b/Windows/Pages/ServerPage.xaml
@@ -20,7 +20,7 @@
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
-                <local:SideMenuControl>
+                <local:SideMenuControl DataContext="{Binding}">
                     
                 </local:SideMenuControl>
             </Grid>
@@ -34,9 +34,26 @@
 
                 </Grid.ColumnDefinitions>
 
-                <local:ServerListControl DataContext="{Binding Servers}">
+                <Grid Grid.Column="0">
+                    <local:ServerListControl DataContext="{Binding Servers}">
 
-                </local:ServerListControl>
+                    </local:ServerListControl>
+                </Grid>
+
+                <Grid Grid.Column="1">
+                    <StackPanel>
+                        <TextBlock Text="{Binding Server.Domain}" HorizontalAlignment="Center" FontSize="30"/>
+                        <TextBlock Text="{Binding Server.IPv4}" HorizontalAlignment="Center" FontSize="30"/>
+                        <TextBlock Text="{Binding Server.CountryName}" HorizontalAlignment="Center" FontSize="30"/>
+
+                        <Button Content="Connect" 
+                                    local:IsBusyProperty.Value="{Binding IsTryConnecting}"
+                                    Command="{Binding ConnectVPNCommand}"
+                                    HorizontalAlignment="Center"
+                                    Background="{StaticResource LightGreenBrush}" 
+                                    />
+                    </StackPanel>
+                </Grid>
             </Grid>
         </Grid>
 
