--- a/Windows/Styles/Colors.xaml
+++ b/Windows/Styles/Colors.xaml
@@ -32,8 +32,8 @@
     <Color x:Key="WordDarkBlue">#0c6991</Color>
     <SolidColorBrush x:Key="WordDarkBlueBrush" Color="{StaticResource WordDarkBlue}" />
 
-    <!--<Color x:Key="WordOrange">#ffa800</Color>
-    <SolidColorBrush x:Key="WordOrangeBrush" Color="{StaticResource WordOrange}" />-->
+    <Color x:Key="WordOrange">#ffa800</Color>
+    <SolidColorBrush x:Key="WordOrangeBrush" Color="{StaticResource WordOrange}" />
 
     <Color x:Key="WordRed">#ff4747</Color>
     <SolidColorBrush x:Key="WordRedBrush" Color="{StaticResource WordRed}" />
